feat: add edit events endpoint
